lms/static/certificates/sass/_commonents.scss: honor背景图片样式

--- a/lms/static/certificates/sass/_components.scss
+++ b/lms/static/certificates/sass/_components.scss
@@ -478,7 +478,8 @@
 
   .accomplishment-rendering {
     background: $white url('../images/bg-honor.png') center no-repeat;
-    background-size: 65%;
+    background-size: cover;
+    z-index: -1;
 
     .deco-corner-tl {
       @include triangle(20px, $cert-distinguished-color, up-right);
