src/edx-platform/lms/static/certificates/sass/_components.scss: honor > background-size。

--- a/lms/static/certificates/sass/_components.scss
+++ b/lms/static/certificates/sass/_components.scss
@@ -478,8 +478,7 @@
 
   .accomplishment-rendering {
     background: $white url('../images/bg-honor.png') center no-repeat;
-    background-size: cover;
-    z-index: -1;
+    background-size: 100%;
 
     .deco-corner-tl {
       @include triangle(20px, $cert-distinguished-color, up-right);
