lms/static/certificates/sass/_print.scss: 证书打印背景。

--- a/lms/static/certificates/sass/_print.scss
+++ b/lms/static/certificates/sass/_print.scss
@@ -185,9 +185,9 @@
   }
 
   // accomplishment
-  .accomplishment-main {
-    @extend %print-no-background;
-  }
+  // .accomplishment-main {
+  //   @extend %print-no-background;
+  // }
 
   .accomplishment-rendering {
     top: 0 !important;
